--- a/2.css
+++ b/2.css
@@ -1167,7 +1167,6 @@
 	width: 100%;
 	max-width: 600px;
 	background-color: #fff;	border-radius: 12px;
-	box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 	-webkit-tap-highlight-color: transparent;
 	outline: none;
 	overflow: hidden;margin-bottom: 6px;
@@ -1192,7 +1191,7 @@
   }
 }
 .delete-post-btn {
-    background-color: red;
+    background-color: #ccc;
 	cursor: pointer;
 	outline: none;color: white;
 }
