--- a/2.css
+++ b/2.css
@@ -377,7 +377,7 @@
   width: 100%;
   height: 100%;
   padding: 10px;
-  background: rgba(255,255,255);
+  background: #121212;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   box-sizing: border-box; /* Ensure padding does not affect width/height */
