--- a/2.css
+++ b/2.css
@@ -377,7 +377,7 @@
   width: 100%;
   height: 100%;
   padding: 10px;
-  background: #121212;
+  background: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   box-sizing: border-box; /* Ensure padding does not affect width/height */
@@ -386,7 +386,7 @@
 
 .comments-popup-content {
   position: relative;
-  overflow: auto;background: #121212;
+  overflow: auto;
   animation: fadein .8s ease-in-out;
   color: white;
 }
